config/oauth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth-service
  namespace: system
spec:
  selector:
    matchLabels:
      control-plane: controller-manager
      app.kubernetes.io/name: service-provider-integration-oauth
  replicas: 1
  template:
    metadata:
      labels:
        control-plane: controller-manager
        app.kubernetes.io/name: service-provider-integration-oauth
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - command:
          - /spi-oauth
          env: []
          image: quay.io/redhat-appstudio/service-provider-integration-oauth:latest
          name: oauth
          securityContext:
            allowPrivilegeEscalation: false
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /ready
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
          - mountPath: /etc/spi/config.yaml
            name: config-file
            readOnly: true
            subPath: config.yaml
          - mountPath: /etc/spi/secret_id
            name: vault-approle
            readOnly: true
            subPath: secret_id
          - mountPath: /etc/spi/role_id
            name: vault-approle
            readOnly: true
            subPath: role_id
        - name: kube-rbac-proxy
          image: gcr.io/kubebuilder/kube-rbac-proxy:v0.13.0
          args:
            - "--secure-listen-address=0.0.0.0:8443"
            - "--upstream=http://127.0.0.1:8080/"
            - "--logtostderr=true"
            - "--v=10"
          ports:
            - containerPort: 8443
              protocol: TCP
              name: https
          resources:
            limits:
              cpu: 50m
              memory: 50Mi
            requests:
              cpu: 20m
              memory: 10Mi
      serviceAccountName: oauth-sa
      terminationGracePeriodSeconds: 10
      volumes:
      - name: config-file
        secret:
          secretName: shared-configuration-file
          items:
            - key: config.yaml
              path: config.yaml
      - name: vault-approle
        secret:
          secretName: vault-approle-spi-oauth
          items:
            - key: role_id
              path: role_id
            - key: secret_id
              path: secret_id
