config/oauth/auth_proxy_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    control-plane: controller-manager
  name: oauth-metrics-service
  namespace: system
spec:
  ports:
    - name: metrics
      port: 8443
      protocol: TCP
      targetPort: https
  selector:
    control-plane: controller-manager
    app.kubernetes.io/name: service-provider-integration-oauth
