config/oauth/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: oauth-service
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: spi-oauth-service
spec:
  ports:
  - port: 8000
    name: oauth-port
    protocol: TCP
    targetPort: 8000
  selector:
    control-plane: controller-manager
    app.kubernetes.io/name: service-provider-integration-oauth
