config/oauth/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: oauth-ingress
spec:
  rules:
  - host: $(OAUTH_HOST)
    http:
      paths:
      - backend:
          service:
            name: oauth-service
            port:
              number: 8000
        path: "/"
        pathType: ImplementationSpecific
